Fix the hidden layers TF model gen param + some small fixes