@@ -5,9 +5,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.*;
 
 public class TFPythonWrapper {
     private static final String GEN_SCRIPT = "h2o_deepwater_generate_models.py";
@@ -35,7 +33,7 @@ public class TFPythonWrapper {
             int[] hiddens) {
 
         networkType = networkType.toLowerCase();
-        if(networkType.endsWith("_bn")) {
+        if (networkType.endsWith("_bn")) {
             networkType = networkType.replace("_bn", "");
         }
 
@@ -45,6 +43,7 @@ public class TFPythonWrapper {
             tensorflowInstalled();
 
             Path output = Files.createTempDirectory(Paths.get(System.getProperty("java.io.tmpdir")), Long.toString(System.nanoTime()));
+            output.toFile().deleteOnExit();
 
             String runScript = extractGenFiles(output);
 
@@ -55,17 +54,16 @@ public class TFPythonWrapper {
     }
 
     private static void templateFilePresent(String networkType) {
-        if(null == TFPythonWrapper.class.getResource("/" + networkType + ".py")) {
-            throw new IllegalArgumentException("Tensorflow template file for network [" + networkType + "] could not be found. Please check the documentation" +
-                    " for a list of currently supported networks.");
+        if (null == TFPythonWrapper.class.getResource("/" + networkType + ".py")) {
+            throw new IllegalArgumentException("Neither a Tensorflow meta graph file nor a Python template file for network [" + networkType + "] could be " +
+                    "found. If you are running a user defined network please make sure the path is correct. Otherwise please check the " +
+                    "documentation for a list of currently supported networks.");
         }
     }
 
     private static void tensorflowInstalled() throws IOException, InterruptedException {
-        // TODO this might have to be changed to something like python -c 'import tensorflow' instead
-        if(Runtime.getRuntime().exec("pip show tensorflow").waitFor() != 0 &&
-                Runtime.getRuntime().exec("pip show tensorflow-gpu").waitFor() != 0){
-            throw new IllegalArgumentException("Python tensorflow not installed on this machine. Please run 'pip install tensorflow[-gpu]' first.");
+        if (Runtime.getRuntime().exec(new String[]{"python", "-c", "import tensorflow"}).waitFor() != 0) {
+            throw new IllegalArgumentException("Python Tensorflow not installed on this machine. Please run 'pip install tensorflow[-gpu]' first.");
         }
     }
 
@@ -73,7 +71,7 @@ public class TFPythonWrapper {
         Files.createDirectory(Paths.get(output.toFile().getAbsolutePath(), "deepwater"));
         Files.createDirectory(Paths.get(output.toFile().getAbsolutePath(), "deepwater", "models"));
 
-        for(Map.Entry<String, String> entry : GEN_FILES.entrySet()) {
+        for (Map.Entry<String, String> entry : GEN_FILES.entrySet()) {
             Files.copy(
                     TFPythonWrapper.class.getResource("/" + entry.getKey()).openStream(),
                     new File(output.toFile(), entry.getValue() + File.separator + entry.getKey()).toPath()
@@ -91,24 +89,25 @@ public class TFPythonWrapper {
                                        int channels,
                                        int numClasses,
                                        int[] hiddens) throws IOException, InterruptedException {
-        // TODO set activation functions appropriately
-        // TODO make a check in MLP if hidden != [200,200] gen the file
-        // TODO delete files - but when?
-        // TODO do we need to have the number of hidden layers in the filename?
-        StringBuilder command = new StringBuilder("python "
-                + runScript + " "
-                + output.toFile().getAbsolutePath() + " "
-                + networkType + " "
-                + width + " "
-                + height + " "
-                + channels + " "
-                + numClasses + " ");
+        List<String> command = new ArrayList<String>() {{
+            this.add("python");
+            this.add(runScript);
+            this.add(output.toFile().getAbsolutePath());
+            this.add(networkType);
+            this.add(width + "");
+            this.add(height + "");
+            this.add(channels + "");
+            this.add(numClasses + "");
+        }};
 
-        if(null != hiddens) {
-            command.append("\"" + Arrays.toString(hiddens) + "\"");
+        if (null != hiddens) {
+            command.add(Arrays.toString(hiddens));
         }
 
-        Runtime.getRuntime().exec(command.toString()).waitFor();
+        String[] cmdArray = new String[command.size()];
+        command.toArray(cmdArray);
+
+        Runtime.getRuntime().exec(cmdArray).waitFor();
         return output.toFile().getAbsolutePath() + File.separator +
                 networkType + "_"
                 + height + "x"
